# Gomoku

./: .gitignore  Cargo.toml  ]  lila  lol  top
src/: main.rs  on_cleanup.rs  on_event.rs  on_init.rs  on_loop.rs  on_render.rs
src/checks/: after_turn_check.rs  capture.rs  double_three.rs  mod.rs  search_space.rs  valid_pos.rs
src/gameplay/: mod.rs
src/gameplay/controller/: collect_game_infos.rs  mod.rs
src/gameplay/model/: game_class.rs  mod.rs  player_class.rs
src/gui/controller/: collect_game_infos.rs  mod.rs  start_gui.rs
src/gui/model/: app.rs  content.rs  game_class.rs  header.rs  mod.rs  player_class.rs
src/ia/: .heuristic.rs.swo  get_ia.rs  handle_board.rs  heurisitic.rs  heuristic.rs  mod.rs  threat_space.rs  zobrist.rs
src/initialization/: game.rs  mod.rs  resource.rs  textures.rs
src/model/: board.rs  bool_option.rs  game.rs  history.rs  mod.rs  params.rs  player.rs  point.rs  score_board.rs
src/render/: board.rs  mod.rs  score.rs  window.rs
