[package]
name = "gomoku"
version = "0.1.0"
authors = ["ArthurMatthys", "grouville"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

gtk = { version = "0.2", features = ["v3_22"] }
gdk-pixbuf = "0.2.0"
gdk = "0.6.0"
#lazy_static = "1.4.0"


