[package]
name = "gomoku"
version = "0.1.0"
authors = ["Arthur Matthys", "Guillaume de Rouville"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sdl2 = "0.34.0"
rand = "0.7.3"
clap = "2.27.1"
array_tool = "1.0.3"
#jemallocator = "0.3.2"

[features]
default = ["sdl2/image", "sdl2/ttf"]

[profile.release]
#lto = "fat"
#codegen-units = 1
